# chroma-log

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  chromalog.ts  commitlint.config.js  index.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: ci.yml  codeql.yml
loggy/: Cargo.toml
loggy/src/: config.rs  entry.rs  formatter.rs  level.rs  lib.rs  main.rs  writer.rs
loggy/src/config/: mod.rs  toml_config.rs
loggy/src/core/: entry.rs  logger.rs  mod.rs
loggy/src/formatter/: json_formatter.rs  mod.rs  simple_formatter.rs
loggy/src/plugins/: mod.rs
loggy/src/writer/: console_writer.rs  file_writer.rs  kafka_writer.rs  mod.rs
src/: logger.ts
src/constants/: colors.ts  defaults.ts
src/core/: color-manager.ts  file-manager.ts
src/formatters/: json.ts  pretty.ts  simple.ts
src/transports/: console.ts  file.ts  http.ts
src/types/: formatter.ts  options.ts  transport.ts
src/utils/: error.ts  format.ts  stack.ts  time.ts
www/: package.json  pnpm-lock.yaml
www/app/: page.tsx
