[package]
name = "loggy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.5"
parking_lot = "0.12"
crossbeam-channel = "0.5"
colored = "2.0"
rdkafka = { version = "0.28", optional = true }
regex = "1.5"
backtrace = "0.3"

[features]
default = []
kafka = ["rdkafka"]
rdkafka = ["dep:rdkafka"]
